Walmart Rest APi
Created Interface and classes for Walmart Rest API.